# EnglishSchoolLiza

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: explore.md  reviewer.md  verifier.md
.claude/commands/: commit-phase.md  handoff.md  ingest-pdf.md  new-engine.md
.claude/hooks/: post_edit_lint.py
app/admin/: CLAUDE.md  __init__.py  auth.py  models.py  service.py
app/analysis/: CLAUDE.md  __init__.py  llm.py  llm_anthropic.py  segments.py  service.py
app/content/: CLAUDE.md  __init__.py  export_fixtures.py  ingest_a2_2022.py  ingest_b1_2022.py  ingest_movers_2022.py  load_fixtures.py  load_test.py  pooling.py  roster.py  seed.py  service.py  storage.py
app/core/: config.py  db.py  logging.py
contracts/: __init__.py  content.py  export_jsonschema.py  runtime.py
docs/: ARCHITECTURE.md  DEVELOPMENT_PLAN.md  INGEST_VIA_CLAUDE_CODE.md  PROMPTS.md
migrations/: env.py
scripts/: transcribe_assets.py
tests/: conftest.py  test_admin.py  test_analysis.py  test_assets_api.py  test_colour_task.py  test_content_pooling.py  test_content_service.py  test_content_storage.py  test_contracts_fixtures.py  test_delivery_api.py  test_delivery_service.py  test_e2e_full.py  test_grading.py  test_health.py  test_ingestion.py  test_integrity.py  test_load_test.py  test_no_correct_invariant.py  test_persistence.py  test_schema_export.py  test_seed.py  test_telemetry.py  test_telemetry_e2e.py
(+74 files in other folders)
